Change .toc height to max-height to fix display clipping bug on smaller screens

--- a/source/assets/stylesheets/components/_off-canvas.scss
+++ b/source/assets/stylesheets/components/_off-canvas.scss
@@ -31,8 +31,7 @@ $nav-width: 25vw;
     ~ a.nav-primary__trigger { @extend %inverse-link; }
 
     .toc {
-      height: 100%;
-      //overflow: auto;
+      max-height: 100%;
     }
   }
 
